--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             container.innerHTML = ""; // Limpa o container antes de carregar novos produtos
             produtos.forEach(produto => {
                 const produtoHTML = `
-                    <a href="${produto.link}" class="flex-none w-64 bg-white rounded-2xl shadow-md overflow-hidden transform transition-transform hover:scale-105">
+                    <a href="${produto.link}" target="_top" class="flex-none w-64 bg-white rounded-2xl shadow-md overflow-hidden transform transition-transform hover:scale-105">
                         <img src="${produto.imagem}" alt="${produto.nome}" class="w-full h-48 object-cover rounded-t-2xl">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg">${produto.nome}</h3>
